--- a/instagram/index.html
+++ b/instagram/index.html
@@ -15,7 +15,7 @@
   <script src="vendor/modernizr/modernizr.js"></script>
 
   <div>
-    <div id="content" class="container">
+    <div id="content">
       <div class="row">
         <div ui-view>
         </div>
@@ -57,12 +57,8 @@
   <!-- Main App JS -->
   <script src="app/app.js"></script>
   <script src="app/framework/components/instagram-module/instagram-module.js"></script>
-  <script src="app/framework/components/instagram-module/factory/instagram-factory.js"></script>
   <script src="app/framework/components/instagram-module/controller/instagram-controller.js"></script>
   <script src="app/framework/components/instagram-module/service/instagram-service.js"></script>
-  <script src="app/framework/components/instagram-module/service/instagram-tag-service.js"></script>
-  <script src="app/framework/components/instagram-module/factory/instagram-tag-factory.js"></script>
-  <script src="app/framework/components/instagram-module/controller/instagram-tag-controller.js"></script>
   <!-- Add New Component JS Above -->
 
 
